// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application should not fail if current route does not exist 1`] = `
<div
  class="root visible"
>
  <nav
    class="navigation"
  >
    <div
      class="navigation"
    >
      <div
        class="header"
      >
        <div
          class="headerContent"
        >
          <span
            aria-label="su-sulu"
            class="headerIcon su-sulu"
          />
          <span
            class="headerTitle"
          >
            Sulu
          </span>
        </div>
      </div>
      <div
        class="user"
      >
        <div
          class="userContent"
        >
          <div
            class="noUserImage"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
          </div>
          <div
            class="userProfile"
          >
            <span>
              Hikaru Sulu
            </span>
            <button>
              <span
                aria-label="su-exit"
                class="su-exit"
              />
              Log out
            </button>
          </div>
        </div>
      </div>
      <div
        class="items"
      />
      <div
        class="versions"
      >
        <div>
          Sulu (
          <a
            href="https://github.com/sulu/sulu/releases"
            target="_blank"
          >
            2.0.0-RC1
          </a>
          )
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <main
      class="main"
    >
      <header
        class="header"
      >
        <nav
          class="toolbar light"
        >
          <div
            class="controls light"
          >
            <button
              class="button light primary"
            >
              <span
                aria-label="su-bars"
                class="icon su-bars"
              />
            </button>
          </div>
          <div
            class="controls light"
          />
        </nav>
      </header>
      <div
        class="viewContainer"
      />
    </main>
  </div>
</div>
`;

exports[`Application should render based on current route 1`] = `
<div
  class="root visible"
>
  <nav
    class="navigation"
  >
    <div
      class="navigation"
    >
      <div
        class="header"
      >
        <div
          class="headerContent"
        >
          <span
            aria-label="su-sulu"
            class="headerIcon su-sulu"
          />
          <span
            class="headerTitle"
          >
            Sulu
          </span>
        </div>
      </div>
      <div
        class="user"
      >
        <div
          class="userContent"
        >
          <div
            class="noUserImage"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
          </div>
          <div
            class="userProfile"
          >
            <span>
              Hikaru Sulu
            </span>
            <button>
              <span
                aria-label="su-exit"
                class="su-exit"
              />
              Log out
            </button>
          </div>
        </div>
      </div>
      <div
        class="items"
      />
      <div
        class="versions"
      >
        <div>
          Sulu (
          <a
            href="https://github.com/sulu/sulu/releases"
            target="_blank"
          >
            2.0.0-RC1
          </a>
          )
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <main
      class="main"
    >
      <header
        class="header"
      >
        <nav
          class="toolbar light"
        >
          <div
            class="controls light"
          >
            <button
              class="button light primary"
            >
              <span
                aria-label="su-bars"
                class="icon su-bars"
              />
            </button>
          </div>
          <div
            class="controls light"
          />
        </nav>
      </header>
      <div
        class="viewContainer"
      >
        <div>
          <h1>
            Test
          </h1>
          <h2>
            test
          </h2>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Application should render login when user is not logged in 1`] = `
<div
  class="login"
>
  <div
    class="loginContainer"
  >
    <div
      class="formContainer"
    >
      <div
        class="logoContainer"
      >
        <span
          aria-label="su-sulu"
          class="su-sulu"
        />
      </div>
      <div
        class="header"
      >
        sulu_admin.welcome
      </div>
      <form
        class="form"
      >
        <fieldset>
          <label
            class="inputField"
          >
            <div
              class="labelText"
            >
              sulu_admin.username_or_email
            </div>
            <label
              class="input default"
            >
              <div
                class="prependedContainer default"
              >
                <span
                  aria-label="su-user"
                  class="icon default su-user"
                />
              </div>
              <input
                type="text"
                value=""
              />
            </label>
          </label>
          <label
            class="inputField"
          >
            <div
              class="labelText"
            >
              sulu_admin.password
            </div>
            <label
              class="input default"
            >
              <div
                class="prependedContainer default"
              >
                <span
                  aria-label="su-lock"
                  class="icon default su-lock"
                />
              </div>
              <input
                type="password"
                value=""
              />
            </label>
          </label>
          <div
            class="buttons"
          >
            <button
              class="button link"
              type="button"
            >
              <span
                class="text"
              >
                sulu_admin.forgot_password
              </span>
            </button>
            <button
              class="button primary"
              disabled=""
              type="submit"
            >
              <span
                class="text"
              >
                sulu_admin.login
              </span>
            </button>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      class="backLinkContainer"
    >
      <a
        class="backLink"
        href="/"
      >
        <span
          aria-label="su-angle-left"
          class="backLinkIcon su-angle-left"
        />
        sulu_admin.back_to_website
      </a>
    </div>
  </div>
</div>
`;

exports[`Application should render login with loader 1`] = `
<div
  class="login"
>
  <div
    class="loginContainer"
  >
    <div
      class="formContainer"
    >
      <div
        class="logoContainer"
      >
        <span
          aria-label="su-sulu"
          class="su-sulu"
        />
      </div>
      <div
        class="loaderContainer"
      >
        <div
          class="spinner"
          style="width: 20px; height: 20px;"
        >
          <div
            class="doubleBounce1"
          />
          <div
            class="doubleBounce2"
          />
        </div>
      </div>
    </div>
    <div
      class="backLinkContainer"
    />
  </div>
</div>
`;

exports[`Application should render opened navigation 1`] = `
<Application
  router={
    Object {
      "route": Object {
        "attributeDefaults": Object {},
        "children": Array [],
        "name": "test",
        "options": Object {},
        "parent": null,
        "path": "/webspaces",
        "rerenderAttributes": Array [],
        "view": "test",
      },
    }
  }
>
  <div
    className="root visible navigationVisible"
  >
    <nav
      className="navigation"
    >
      <Navigation
        onLogout={[Function]}
        onNavigate={[Function]}
        router={
          Object {
            "route": Object {
              "attributeDefaults": Object {},
              "children": Array [],
              "name": "test",
              "options": Object {},
              "parent": null,
              "path": "/webspaces",
              "rerenderAttributes": Array [],
              "view": "test",
            },
          }
        }
      >
        <Navigation
          onLogoutClick={[Function]}
          onProfileClick={[Function]}
          suluVersion="2.0.0-RC1"
          suluVersionLink="https://github.com/sulu/sulu/releases"
          title="Sulu"
          username="Hikaru Sulu"
        >
          <div
            className="navigation"
          >
            <div
              className="header"
            >
              <div
                className="headerContent"
              >
                <Icon
                  className="headerIcon"
                  name="su-sulu"
                >
                  <span
                    aria-label="su-sulu"
                    className="headerIcon su-sulu"
                  />
                </Icon>
                <span
                  className="headerTitle"
                >
                  Sulu
                </span>
              </div>
            </div>
            <div
              className="user"
            >
              <div
                className="userContent"
              >
                <div
                  className="noUserImage"
                  onClick={[Function]}
                >
                  <Icon
                    name="fa-user"
                  >
                    <span
                      aria-label="fa-user"
                      className="fa fa-user"
                    />
                  </Icon>
                </div>
                <div
                  className="userProfile"
                >
                  <span
                    onClick={[Function]}
                  >
                    Hikaru Sulu
                  </span>
                  <button
                    onClick={[Function]}
                  >
                    <Icon
                      name="su-exit"
                    >
                      <span
                        aria-label="su-exit"
                        className="su-exit"
                      />
                    </Icon>
                    Log out
                  </button>
                </div>
              </div>
            </div>
            <div
              className="items"
            />
            <div
              className="versions"
            >
              <div>
                Sulu (
                <a
                  href="https://github.com/sulu/sulu/releases"
                  target="_blank"
                >
                  2.0.0-RC1
                </a>
                )
              </div>
            </div>
          </div>
        </Navigation>
      </Navigation>
    </nav>
    <div
      className="content"
    >
      <Backdrop
        fixed={false}
        local={true}
        onClick={[Function]}
        open={true}
        visible={false}
      >
        <div
          className="backdrop"
          onClick={[Function]}
        />
      </Backdrop>
      <main
        className="main"
      >
        <header
          className="header"
        >
          <Toolbar
            navigationOpen={true}
            onNavigationButtonClick={[Function]}
          >
            <Toolbar
              skin="light"
            >
              <nav
                className="toolbar light"
              >
                <Controls
                  key=".2"
                  skin="light"
                >
                  <div
                    className="controls light"
                  >
                    <Button
                      active={false}
                      disabled={false}
                      hasOptions={false}
                      icon="su-times"
                      key=".0"
                      onClick={[Function]}
                      primary={true}
                      skin="light"
                    >
                      <button
                        className="button light primary"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <Icon
                          className="icon"
                          name="su-times"
                        >
                          <span
                            aria-label="su-times"
                            className="icon su-times"
                          />
                        </Icon>
                      </button>
                    </Button>
                  </div>
                </Controls>
                <Controls
                  key=".3"
                  skin="light"
                >
                  <div
                    className="controls light"
                  />
                </Controls>
              </nav>
            </Toolbar>
          </Toolbar>
        </header>
        <div
          className="viewContainer"
        >
          <Test
            router={
              Object {
                "route": Object {
                  "attributeDefaults": Object {},
                  "children": Array [],
                  "name": "test",
                  "options": Object {},
                  "parent": null,
                  "path": "/webspaces",
                  "rerenderAttributes": Array [],
                  "view": "test",
                },
              }
            }
          >
            <div>
              <h1>
                Test
              </h1>
              <h2>
                test
              </h2>
            </div>
          </Test>
        </div>
      </main>
      <Sidebar
        className="sidebar"
      />
    </div>
  </div>
</Application>
`;
